--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div class="items_header"><img class="img-fluid"
                     src="assets/img/2560x1700-Descarga-gratuita-Mai-Sakurajima-Rascal-no-suena-con-Bunny-Girl-1024x680-removebg-preview.png"
                     alt=""></div>
-            <div class="items_header">
-                <h2>Leticia</h2>
+            <div class="items_header container-fluid text-center">
+                <h2>sterza.art</h2>
             </div>
             <div class="items_header"><img src="" alt=""></div>
         </header>
@@ -41,7 +41,7 @@
                     <!-- Images -->
                     <div class="carousel_img first">
                     <div class="slider__div">
-                        <img src="assets/img/drlug7pf63k61.jpg" alt="img 1">
+                        <img src="assets/img/Fas_de_Bocchi_the_Rock_estao_Causando_Problemas_800x418.jpg" alt="img 1">
                     </div>
                     <div class="slider__div">
                         <img src="assets/img/drlug7pf63k61.jpg" alt="img 1">
@@ -106,9 +106,14 @@
                 <!-- Manual -->
             </section>
             <div class="info">
-                <h2>Conheça meu trabalho</h2>
             </div>
         </section>
+        <section class="paralax">
+            <div class="paralax_div">
+                <div class="encomende"><a href="https://www.instagram.com/sterza.art/">ENCOMENDE A SUA</a></div>
+            </div>
+        </section>
+        <section class="paralax"></section>
     </div>
     <script src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
