--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
             </div>
             <div class="items_header"><svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.5 23C17.8513 23 23 17.8513 23 11.5C23 5.14873 17.8513 0 11.5 0C5.14873 0 0 5.14873 0 11.5C0 17.8513 5.14873 23 11.5 23ZM7.48182 21.2007C8.75574 21.7284 10.1211 22 11.5 22V15.2239C11.011 15.2239 10.5267 15.1275 10.0749 14.9404C9.62314 14.7533 9.21262 14.479 8.86683 14.1332C8.52103 13.7874 8.24674 13.3769 8.05959 12.9251C7.87245 12.4733 7.77613 11.989 7.77613 11.5C7.77613 11.011 7.87245 10.5267 8.0596 10.0749C8.24674 9.62314 8.52104 9.21262 8.86683 8.86683C9.21262 8.52103 9.62314 8.24674 10.0749 8.05959C10.5267 7.87245 11.011 7.77613 11.5 7.77613L11.5 1C10.1211 0.999999 8.75575 1.27159 7.48183 1.79926C6.20791 2.32694 5.0504 3.10036 4.07538 4.07538C3.10037 5.05039 2.32694 6.2079 1.79927 7.48182C1.27159 8.75574 1 10.1211 1 11.5C1 12.8789 1.27159 14.2443 1.79926 15.5182C2.32694 16.7921 3.10036 17.9496 4.07538 18.9246C5.05039 19.8996 6.2079 20.6731 7.48182 21.2007Z" fill="black"/>
-                </svg>   
-                <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.5 23C17.8513 23 23 17.8513 23 11.5C23 5.14873 17.8513 0 11.5 0C5.14873 0 0 5.14873 0 11.5C0 17.8513 5.14873 23 11.5 23ZM18.9246 4.07538C16.9555 2.10625 14.2848 1 11.5 1V7.4922C12.5629 7.4922 13.5823 7.91444 14.3339 8.66605C15.0856 9.41766 15.5078 10.4371 15.5078 11.5C15.5078 12.5629 15.0856 13.5823 14.3339 14.3339C13.5823 15.0856 12.5629 15.5078 11.5 15.5078L11.5 22C14.2848 22 16.9555 20.8938 18.9246 18.9246C20.8938 16.9555 22 14.2848 22 11.5C22 8.71523 20.8938 6.04451 18.9246 4.07538Z" fill="white"/>
-                    </svg>                   
+                </svg>                    
                 </div>
         </header>
         <section id="my_carousel" class="slider_section">
@@ -45,44 +42,44 @@
                     <!-- Images -->
                     <div class="carousel_img first">
                         <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
+                            <img src="assets/img/Desenho1.jpg" alt="img 1">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
+                            <img src="assets/img/Desenho2.jpg" alt="img 1">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
+                            <img src="assets/img/Desenho3.jpg" alt="img 1">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
+                            <img src="assets/img/Desenho4.jpg" alt="img 1">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
-                        </div>
-                    </div>
-                    <div class="carousel_img">
-                        <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
+                            <img src="assets/img/Desenho6.jpg" alt="img 1">
                         </div>
                     </div>
                     <div class="carousel_img">
                         <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
+                            <img src="assets/img/Desenho5.jpg" alt="img 1">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/images.jpg" alt="img 1">
+                            <img src="assets/img/Desenho7.jpg" alt="img 1">
+                        </div>
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho8.jpg" alt="img 1">
+                        </div>
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho9.jpg" alt="img 1">
+                        </div>
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho10.jpg" alt="img 1">
+                        </div>
+                    </div>
+                    <div class="carousel_img">
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho11.jpg" alt="img 1">
+                        </div>
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho12.jpg" alt="img 1">
                         </div>
                     </div>
                 </div>
