--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
             <div class="items_header container-fluid text-center">
                 <h2>sterza.art</h2>
             </div>
-            <div class="items_header"><svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M11.5 23C17.8513 23 23 17.8513 23 11.5C23 5.14873 17.8513 0 11.5 0C5.14873 0 0 5.14873 0 11.5C0 17.8513 5.14873 23 11.5 23ZM7.48182 21.2007C8.75574 21.7284 10.1211 22 11.5 22V15.2239C11.011 15.2239 10.5267 15.1275 10.0749 14.9404C9.62314 14.7533 9.21262 14.479 8.86683 14.1332C8.52103 13.7874 8.24674 13.3769 8.05959 12.9251C7.87245 12.4733 7.77613 11.989 7.77613 11.5C7.77613 11.011 7.87245 10.5267 8.0596 10.0749C8.24674 9.62314 8.52104 9.21262 8.86683 8.86683C9.21262 8.52103 9.62314 8.24674 10.0749 8.05959C10.5267 7.87245 11.011 7.77613 11.5 7.77613L11.5 1C10.1211 0.999999 8.75575 1.27159 7.48183 1.79926C6.20791 2.32694 5.0504 3.10036 4.07538 4.07538C3.10037 5.05039 2.32694 6.2079 1.79927 7.48182C1.27159 8.75574 1 10.1211 1 11.5C1 12.8789 1.27159 14.2443 1.79926 15.5182C2.32694 16.7921 3.10036 17.9496 4.07538 18.9246C5.05039 19.8996 6.2079 20.6731 7.48182 21.2007Z" fill="black"/>
-                </svg>                    
-                </div>
+            <div class="items_header anima" id="darkmode">
+                
+            </div>
         </header>
         <section id="my_carousel" class="slider_section">
             <div class="info">
@@ -114,7 +113,11 @@
                 <div class="encomende"><a href="https://www.instagram.com/sterza.art/">ENCOMENDE A SUA</a></div>
             </div>
         </section>
-        <section class="paralax"></section>
+        <section class="profile align-center">
+            <div class="profile_center">
+                <a href="https://www.instagram.com/sterza.art/"><img class="profile_background" src="assets/img/profile 1.jpg" alt=""></a>
+            </div>
+        </section>
     </div>
     <script src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
