--- a/index.html
+++ b/index.html
@@ -41,44 +41,50 @@
                     <!-- Images -->
                     <div class="carousel_img first">
                         <div class="slider__div">
-                            <img src="assets/img/Desenho1.jpg" alt="img 1">
+                            <img src="assets/img/Desenho1.jpg" alt="Moça de cabelo ruivo e olhos verdes">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/Desenho2.jpg" alt="img 1">
+                            <img src="assets/img/Desenho2.jpg" alt="Moça de cabelo branco com olhos vermelhos e chifres">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/Desenho3.jpg" alt="img 1">
+                            <img src="assets/img/Desenho3.jpg" alt="Moço de cabelo roxo com orelhas de gato">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/Desenho4.jpg" alt="img 1">
+                            <img src="assets/img/Desenho4.jpg" alt="Desenho do anime Haikyū">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/Desenho6.jpg" alt="img 1">
-                        </div>
-                    </div>
-                    <div class="carousel_img">
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho5.jpg" alt="img 1">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho7.jpg" alt="img 1">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho8.jpg" alt="img 1">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho9.jpg" alt="img 1">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho10.jpg" alt="img 1">
+                            <img src="assets/img/Desenho6.jpg" alt="Moça morena de olhos vermelhos orelhas de gato e cabelo da cor bisque">
                         </div>
                     </div>
                     <div class="carousel_img">
                         <div class="slider__div">
-                            <img src="assets/img/Desenho11.jpg" alt="img 1">
+                            <img src="assets/img/Desenho5.jpg" alt="Moço de cabelo cinza e olhos verdes">
                         </div>
                         <div class="slider__div">
-                            <img src="assets/img/Desenho12.jpg" alt="img 1">
+                            <img src="assets/img/Desenho7.jpg" alt="Cogumelo mágico com uma varinha mágica">
+                        </div>
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho8.jpg" alt="Moça loira, chifres e olhos verdes">
+                        </div>
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho9.jpg" alt="Moça de cabelo roxo, ressaltando os olhos da cor rubi e suas perspectivas">
+                        </div>
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho10.jpg" alt="Cogumelo branco sentado olhando morcegos">
+                        </div>
+                    </div>
+                    <div class="carousel_img">
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho11.jpg" alt="Moça com olhos de cor diferentes um sendo vermelho e o outro roxo, morena de cabelo branco">
+                        </div>
+                        <div class="slider__div">
+                            <img src="assets/img/Desenho12.jpg" alt="Gatos na janela">
+                        </div>
+                        <div class="slider__div">
+                        </div>
+                        <div class="slider__div">
+                        </div>
+                        <div class="slider__div">
                         </div>
                     </div>
                 </div>
