--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <meta name="copyright" content="Guilherme Rissi, 2024. Todos os direitos reservados.">
 </head>
 
 <body>
     <div class="all_components">
         <header class="#">
-            <div class="items_header"></div>
+            <div class="items_header">
+            </div>
             <div class="items_header container-fluid text-center">
                 <h2>sterza.art</h2>
             </div>
             <div class="items_header anima" id="darkmode">
-                
+
             </div>
         </header>
         <section id="my_carousel" class="slider_section">
@@ -40,45 +42,56 @@
 
                     <!-- Images -->
                     <div class="carousel_img first">
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho1.jpg" alt="Moça de cabelo ruivo e olhos verdes">
+                        <div class="slider__div" id="Desenho1">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho1.jpg"
+                                alt="Moça de cabelo ruivo e olhos verdes">
                         </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho2.jpg" alt="Moça de cabelo branco com olhos vermelhos e chifres">
+                        <div class="slider__div" id="Desenho2">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho2.jpg"
+                                alt="Moça de cabelo branco com olhos vermelhos e chifres">
                         </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho3.jpg" alt="Moço de cabelo roxo com orelhas de gato">
+                        <div class="slider__div" id="Desenho3">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho3.jpg"
+                                alt="Moço de cabelo roxo com orelhas de gato">
                         </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho4.jpg" alt="Desenho do anime Haikyū">
+                        <div class="slider__div" id="Desenho4">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho4.jpg"
+                                alt="Desenho do anime Haikyū">
                         </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho6.jpg" alt="Moça morena de olhos vermelhos orelhas de gato e cabelo da cor bisque">
-                        </div>
-                    </div>
-                    <div class="carousel_img">
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho5.jpg" alt="Moço de cabelo cinza e olhos verdes">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho7.jpg" alt="Cogumelo mágico com uma varinha mágica">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho8.jpg" alt="Moça loira, chifres e olhos verdes">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho9.jpg" alt="Moça de cabelo roxo, ressaltando os olhos da cor rubi e suas perspectivas">
-                        </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho10.jpg" alt="Cogumelo branco sentado olhando morcegos">
+                        <div class="slider__div" id="Desenho5">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho6.jpg"
+                                alt="Moça morena de olhos vermelhos orelhas de gato e cabelo da cor bisque">
                         </div>
                     </div>
                     <div class="carousel_img">
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho11.jpg" alt="Moça com olhos de cor diferentes um sendo vermelho e o outro roxo, morena de cabelo branco">
+                        <div class="slider__div" id="Desenho6">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho5.jpg"
+                                alt="Moço de cabelo cinza e olhos verdes">
                         </div>
-                        <div class="slider__div">
-                            <img src="assets/img/Desenho12.jpg" alt="Gatos na janela">
+                        <div class="slider__div" id="Desenho7">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho7.jpg"
+                                alt="Cogumelo mágico com uma varinha mágica">
+                        </div>
+                        <div class="slider__div" id="Desenho8">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho8.jpg"
+                                alt="Moça loira, chifres e olhos verdes">
+                        </div>
+                        <div class="slider__div" id="Desenho9">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho9.jpg"
+                                alt="Moça de cabelo roxo, ressaltando os olhos da cor rubi e suas perspectivas">
+                        </div>
+                        <div class="slider__div" id="Desenho10">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho10.jpg"
+                                alt="Cogumelo branco sentado olhando morcegos">
+                        </div>
+                    </div>
+                    <div class="carousel_img">
+                        <div class="slider__div" id="Desenho11">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho11.jpg"
+                                alt="Moça com olhos de cor diferentes um sendo vermelho e o outro roxo, morena de cabelo branco">
+                        </div>
+                        <div class="slider__div" id="Desenho12">
+                            <img onclick="showPopup(this.src)" src="assets/img/Desenho12.jpg" alt="Gatos na janela">
                         </div>
                         <div class="slider__div">
                         </div>
@@ -89,6 +102,10 @@
                     </div>
                 </div>
                 <!-- Images -->
+                <div class="popup" id="popup">
+                    <span class="close-btn" onclick="closePopup()"></span>
+                    <img id="popupImg" src="" alt="Popup Image">
+                </div>
 
                 <!-- Auto pass -->
                 <div class="auto_pass">
@@ -121,10 +138,23 @@
         </section>
         <section class="profile align-center">
             <div class="profile_center">
-                <a href="https://www.instagram.com/sterza.art/"><img class="profile_background" src="assets/img/profile 1.jpg" alt=""></a>
+                <a href="https://www.instagram.com/sterza.art/"><img class="profile_background"
+                        src="assets/img/profile 1.jpg" alt=""></a>
             </div>
         </section>
+        <footer class="footer_page">
+            <div class="img_footer">
+                <img src="assets/icon/Frame 14.png" alt="">
+            </div>
+            <div>
+                <div>
+                    <a href=""><p>&copy; 2024 Guilherme Rissi. Todos os direitos reservados.</p></a>
+                </div>
+            </div>
+
+        </footer>
     </div>
+
     <script src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
