--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
             <div>
                 <div>
-                    <a href=""><p>&copy; 2024 Guilherme Rissi. Todos os direitos reservados.</p></a>
+                    <a href=""><p>&copy; 2024 Leticia Sterza. Todos os direitos reservados.</p></a>
                 </div>
             </div>
 
